--- a/app/views/donations/_connect_with_friends.html.erb
+++ b/app/views/donations/_connect_with_friends.html.erb
@@ -1,4 +1,4 @@
-<div class="notice-box px4 py1">
+<div class="notice-box mb4 px4 py1">
   <p><%= t('.connect_with_facebook_and_twitter') %></p>
   <p><%= t('.never_publish') %></p>
 
