--- a/app/views/pages/_about.es.html.erb
+++ b/app/views/pages/_about.es.html.erb
@@ -4,16 +4,16 @@
 
 	<h1><%= title t('metas.about.title') %></h1>
 
-  <p>TrackDons es una herramienta muy simple para que registres los proyectos a los que donas. Te ayudará a recordar a qué proyectos has donado y cuándo (y si deberías volver a donar), y te anima a hacer tus donaciones públicas, como una forma de insipiración para que tus amigos donen a esos proyectos o a otros.</p>
+  <p>TrackDons es una herramienta muy simple para que registres los proyectos a los que donas. Te ayudará a recordar a qué proyectos has donado y cuándo (y si deberías volver a donar), y te anima a hacer tus donaciones públicas, como una forma de inspiración para que tus amigos donen a esos proyectos o a otros.</p>
 
   <p>Muchas cosas en el mundo no habrían podido ser creadas sin la colaboración desinteresada de la gente que creía en cierta causa. Cada país tiene unos niveles de compromiso diferentes para las causas altruistas, pero nosotros creemos que Internet nos permite una nueva generación de micro-altruísmo (por ejemplo Kickstarter) que puede asegurar que muchos proyectos pequeños consigan una fuente sostenible de ingresos para mantenerser funcionando, sin necesidad de encontrar un modelo de negocio.</p>
 
-  <p>Creemos que normalmente donamos casi por accidente, cuando se nos pide, y que las donaciones no son aún muy habituales. Pagamos la suscripción a nuestro gimnasio o los accesorios de nuestra bici cuando se estropean, ¿y sólo donamos a esa fantástica web o a ese proyecto básico de vez en cuándo?</p>
+  <p>Creemos que normalmente donamos casi por accidente, cuando se nos pide, y que las donaciones no son aún muy habituales. Pagamos la suscripción a nuestro gimnasio o los accesorios de nuestra bici cuando se estropean, ¿y sólo donamos a esa fantástica web o a ese proyecto básico de vez en cuando?</p>
 
   <p>Como objetivos a largo plazo, nos imaginamos muchas otras cosas...</p>
 
   <ul>
-    <li>si unos ingresos basados en donaciones pueden convertirse en un model de negocio sostenible (por ejemplo  haciendo que las suscripciones a productos digitales sean atractivas, con suficiente volument, etc.)</li>
+    <li>si unos ingresos basados en donaciones pueden convertirse en un modelo de negocio sostenible (por ejemplo haciendo que las suscripciones a productos digitales sean atractivas, con suficiente volumen, etc.)</li>
     <li>si TrackDons logra acumular suficientes datos, sería divertido ver qué patrones de donación existen</li>
   </ul>
 
@@ -26,14 +26,14 @@
   <p>Ahora mismo no. Pero hey, ¡podríamos pedir donaciones! De hecho esto es un experimento de aprendizaje de programación y para validar si la idea tiene sentido.</p>
 
   <h3>¿Quién está detrás de TrackDons?</h3>
-  <p>Este es un <em>pet-project</em> empezado por Álvaro Ortiz (<a href="http://www.twitter.com/@furilo">@furilo</a>). Fernando Blat (<a href="http://www.twitter.com/@ferblape">@ferblape</a>) y Jorge Sancha (<a href="http://www.twitter.com/@jorgesancha">@jorgesancha</a>) si les parecía bueno como para colaborar, y decidieron que sí. Aún más, la idea es que se convierta en una proyecto de comunidad abierta. Se aceptan contribuciones de varios tipos. Puedes empezar en nuestro <a href="http://github.com/furilo/trackdons">repositorio de Github</a>.</p>
+  <p>Este es un <em>pet-project</em> empezado por Álvaro Ortiz (<a href="https://www.twitter.com/@furilo">@furilo</a>). Fernando Blat (<a href="https://www.twitter.com/@ferblape">@ferblape</a>) y Jorge Sancha (<a href="https://www.twitter.com/@jorgesancha">@jorgesancha</a>) si les parecía bueno como para colaborar, y decidieron que sí. Aún más, la idea es que se convierta en una proyecto de comunidad abierta. Se aceptan contribuciones de varios tipos. Puedes empezar en nuestro <a href="https://github.com/trackdons/trackdons">repositorio de Github</a>.</p>
 
   <p>Es raro hablar del futuro cuando sabemos lo difícil que es sacar adelante cualquier proyecto que no hemos empezado (así que el resultado más probable es que lo abandonemos todo rápidamente), pero si a alguien le gusta la idea de TrackDons y piensa en contribuír, si alguien se pregunta: ¿qué puedo esperar? ¿Qué diablos es esta cosa de la comunidad? ¿Y si yo contribuyo, habrá alguien haciendo dinero con esto?</p>
 
   <p>Algunas ideas básicas para intentar responder estas preguntas legítimas:</p>
   <ul>
     <li>Proyecto abierto: el código es y siempre será abierto. Todo lo que contribuyas estará sujeto a esa licencia, que será igualmente abierta y reusable. El contenido de los usuarios pertenecerá a cada usuario, y haremos que sea sencillo exportarlo y llevártelo contigo.</li>
-    <li>Sin beneficio: aunque la prioridad ahora es simplemente crear algo útil para nostoros y, ójala, para los proyectos, tenemos algunas ideas sobre cómo generar beneficios que soportarían el desarrollo de TrackDons (el primero es, como habrás imaginado: ¡donaciones!). Cuando llegue ese día, estaremos encantados de distribuír recursos entre todos los que contribuyan.</li>
+    <li>Sin beneficio: aunque la prioridad ahora es simplemente crear algo útil para nosotros y, ojalá, para los proyectos, tenemos algunas ideas sobre cómo generar beneficios que soportarían el desarrollo de TrackDons (el primero es, como habrás imaginado: ¡donaciones!). Cuando llegue ese día, estaremos encantados de distribuír recursos entre todos los que contribuyan.</li>
   </ul>
 
   <p>Ante cualquier duda, escribe a lets@trackdons.org</p>
