Upgrade to Rails 5.0.x

--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
-  
+
   <h1 title="<%= @user.name %>">
-    <%= gravatar_for(@user, size: 72) %> 
+    <%= gravatar_for(@user, size: 72) %>
     <%= @user.name %>
   </h1>
   <div class="links">
@@ -11,7 +11,7 @@
   </div>
 
   <div class="counters">
-  
+
     <div class="has_donated">
       <span><%= t 'users.header.has_donated_to' %></span>
       <div class="value">
@@ -22,7 +22,7 @@
     <div class="thinking_on_donating">
       <span><%= t 'users.header.thinking_on_donating_to' %></span>
       <div class="value">
-        <%= t '.project', count: @user.all_following.count %>
+        <%= t('.project', count: @user.all_following.count) %>
       </div>
     </div>
 
