Update to Rails 5.1.6

--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -23,7 +23,7 @@
 
   <% end %>
 
-  <% if current_user.invitations(true).any? %>
+  <% if current_user.invitations.any? %>
     <section id="invitations_sent">
 
       <p>You have sent this invitations:</p>
